# zerod_rl

./: README.md  Taskfile.yml  hello.py  pyproject.toml
a01_ga_bandit/: README.md  cli.py  cross.py  environment.py  episode.py  gene.py  individual.py  sort.py
a01_ga_bandit/select/: __init__.py  interface.py  linear.py
c01_grid_world/: env.py
s01_bandit/: bandit.py  slot.py
s01_bandit/action_reward_estimator/: __init__.py  interface.py
s01_bandit/action_value_estimator/: avg.py  exp.py
s01_bandit/agent/: eplison_greedy.py  interface.py
s01_bandit/bandit/: fix.py  interface.py  nonstat.py
s01_bandit/cli/: avg.py  epsilon.py  nonstat.py
s02_mdp/: action.py  env.py  experiment.py  state.py
s02_mdp/policy/: __init__.py  best.py  interface.py  random.py
s04_dp_pe/: README.md  dp.py  policy.py  value_iter.py
s05_mc/: experiment.py  history.py  optimizer.py
s06_td/: agent.py  experiment.py
s07_nnq/: agent.py  experiment.py
tests/: test_c01.py  test_s01.py
tests/tests_s01/: test_bandit.py
